@@ -4,7 +4,7 @@
     <parent>
         <groupId>cyou.wssy001</groupId>
         <artifactId>fallout76-assistant</artifactId>
-        <version>1.3.4.dev</version>
+        <version>1.3.4</version>
     </parent>
 
     <artifactId>base-service-provider</artifactId>
@@ -65,9 +65,6 @@
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
-                    <compilerArgs>
-                        <arg>--enable-preview</arg>
-                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -76,7 +73,6 @@
                 <configuration>
                     <imageName>fallout76-assistant-robot</imageName>
                     <buildArgs combine.children="append">
-                        <buildArg>--enable-preview</buildArg>
                         <buildArg>--enable-https</buildArg>
                         <buildArg>--features=cyou.wssy001.baseserviceprovider.config.BouncyCastleFeature</buildArg>
                         <buildArg>--initialize-at-run-time=org.bouncycastle.jcajce.provider.drbg.DRBG$Default</buildArg>
@@ -101,12 +97,6 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
-                    <jvmArguments>
-                        --enable-preview
-                    </jvmArguments>
-                    <compilerArguments>
-                        --enable-preview
-                    </compilerArguments>
                 </configuration>
             </plugin>
         </plugins>
